# meal-analysis-agents

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: ci.yml
data/: README.md
data/results/: eval_metrics_summary.json  eval_results_gpt-4o-mini.json  eval_results_gpt-4o.json  eval_results_gpt-5.1.json  eval_results_gpt-5.2.json
docker/: README.md
docs/: EVAL_REPORT.md  README.md  RESULTS_TABLE.md
evals/: README.md  __init__.py  collect_metrics.py  metrics.py  render_results_table.py  runner.py
scripts/: run_evals_pipeline.sh
src/meal_analysis/: __init__.py  client.py  config.py  schemas.py
src/meal_analysis/agents/: __init__.py  guardrail_check.py  meal_analysis.py  safety_checks.py
src/meal_analysis/api/: __init__.py  main.py  pipeline.py
tests/unit/: conftest.py  test_agents_guardrail_check.py  test_agents_meal_analysis.py  test_agents_safety_checks.py  test_api_main.py  test_api_pipeline.py  test_client.py  test_evals_metrics.py  test_evals_render_results_table.py  test_evals_runner.py  test_schemas.py
