[project]
name = "meal-analysis-agents"
version = "0.1.0"
description = "An agentic meal-analysis pipeline with specialized guardrail, inference, and safety agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2",
    "pydantic-settings>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meal_analysis"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
ui = [
    "gradio",
]
